@@ -59,6 +59,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #16250: Fix the invocations of URLError which had misplaced filename
+  attribute for exception.
+
 - Issue #10836: Fix exception raised when file not found in urlretrieve
   Initial patch by Ezio Melotti.
 
